--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "rename-version": "docusaurus-rename-version",
+    "test":"echo \"No tests defined.\""
   },
   "devDependencies": {
     "docusaurus": "^1.3.2"
