--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
 # If you only want circle to run on direct commits to master, you can uncomment this out
 # and uncomment the filters: *filter-only-master down below too
 #
-# aliases:
-#  - &filter-only-master
-#    branches:
-#      only:
-#        - master
+aliases:
+ - &filter-only-master
+   branches:
+     only:
+       - master
 
 version: 2
 jobs:
   deploy-website:
     docker:
-      # specify the version you desire here
       - image: circleci/node:8.11.1
 
     steps:
@@ -29,4 +28,4 @@ workflows:
   build_and_deploy:
     jobs:
       - deploy-website:
-#         filters: *filter-only-master
+        filters: *filter-only-master
