--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,7 @@
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version",
-    "test":"echo \"No tests defined.\""
+    "test": "echo \"Error: no test specified\""
   },
   "devDependencies": {
     "docusaurus": "^1.3.2"
