--- a/website/.circleci/config.yml
+++ b/website/.circleci/config.yml
@@ -15,13 +15,14 @@ jobs:
 
     steps:
       - checkout
+      - run: sudo yarn global add yarn@1.7.0
       - run:
           name: Deploying to GitHub Pages
           command: |
             git config --global user.email "$GITHUB_USERNAME@users.noreply.github.com"
             git config --global user.name "$GITHUB_NAME"
             echo "machine github.com login $GITHUB_USERNAME password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages
+            cd website && yarn install && yarn test && GIT_USER=$GIT_USER yarn run publish-gh-pages
 
 workflows:
   version: 2
