--- a/website/static/.circleci/config.yml
+++ b/website/static/.circleci/config.yml
@@ -6,5 +6,6 @@ jobs:
     machine: true
     branches:
       ignore: gh-pages
+      ignore: master
     steps:
-      - run: echo "Skipping tests on gh-pages branch"
+      - run: echo "Skipping tests on gh-pages/master branch"
