chore(circleci): test

--- a/website/.circleci/config.yml
+++ b/website/.circleci/config.yml
@@ -22,7 +22,8 @@ jobs:
             git config --global user.email "$GITHUB_USERNAME@users.noreply.github.com"
             git config --global user.name "$GITHUB_NAME"
             echo "machine github.com login $GITHUB_USERNAME password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && yarn test && GIT_USER=$GIT_USER yarn run publish-gh-pages
+            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages
+      - run: yarn test
 
 workflows:
   version: 2
