--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,15 @@ jobs:
   deploy-website:
     docker:
       - image: circleci/node:8.11.3
-
     steps:
       - checkout
-      - run: sudo yarn global add yarn@1.7.0
       - run:
           name: Deploying to GitHub Pages
           command: |
             git config --global user.email "$GITHUB_USERNAME@users.noreply.github.com"
             git config --global user.name "$GITHUB_NAME"
             echo "machine github.com login $GITHUB_USERNAME password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages
+            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages && touch CNAME && echo "docs.nos.io" >> CNAME
 
 workflows:
   version: 2
