--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             git config --global user.email "$GITHUB_USERNAME@users.noreply.github.com"
             git config --global user.name "$GITHUB_NAME"
             echo "machine github.com login $GITHUB_USERNAME password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages && touch CNAME && echo "docs.nos.io" >> CNAME
+            cd website && yarn install && GIT_USER=$GIT_USER yarn run publish-gh-pages
 
 workflows:
   version: 2
